--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -142,7 +142,6 @@ blockquote {
 }
 
 
-
 /**
  * Code formatting
  */
@@ -250,5 +249,28 @@ table {
   }
   td {
     border: 1px solid $grey-color-light;
+  }
+}
+
+/**
+ * Telegram button
+ */
+ .telegram-button {
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #0088cc;
+  color: #ffffff;
+  border: 1px solid #0088cc;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+
+  svg {
+    margin-right: 5px;
+  }
+
+  &:hover {
+    background-color: #005f99;
+    border-color: #005f99;
   }
 }
