--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -47,21 +47,6 @@ $on-laptop:        800px !default;
 @import
   "minima/base",
   "minima/layout",
-  "minima/syntax-highlighting"
+  "minima/syntax-highlighting",
+  "minima/telegram-button"
 ;
-
-.telegram-button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #0088cc;
-  color: #ffffff;
-  border: 1px solid #0088cc;
-  border-radius: 20px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.telegram-button:hover {
-  background-color: #005f99;
-  border-color: #005f99;
-}
