--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,30 +10,41 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+  <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2> -->
+  <div class="post-grid">
+    {%- for post in site.posts -%}
+    <div class="post-grid-item">
+      <a class="post-image" href="{{ post.url | relative_url }}">
+        <img src="{{ post.image_url | relative_url }}" alt="{{ post.title | escape }}">
+      </a>
+      <h2>
+        <a class="post-link" href="{{ post.url | relative_url }}">
+          {{ post.title | escape }}
+        </a>
+      </h2>
+      {%- if site.show_excerpts -%}
+        {{ post.excerpt }}
+      {%- endif -%}
+    </div>
+    {%- endfor -%}
+  </div>
   {%- endif -%}
 
-  <a href="https://telegram.me/DJLCorp_bot" class="telegram-button">
-    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path fill="#fff" d="M18.384,22.779c0.322,0.228 0.737,0.285 1.107,0.145c0.37,-0.141 0.642,-0.457 0.724,-0.84c0.869,-4.084 2.977,-14.421 3.768,-18.136c0.06,-0.28 -0.04,-0.571 -0.26,-0.758c-0.22,-0.187 -0.525,-0.241 -0.797,-0.14c-4.193,1.552 -17.106,6.397 -22.384,8.35c-0.335,0.124 -0.553,0.446 -0.542,0.799c0.012,0.354 0.25,0.661 0.593,0.764c2.367,0.708 5.474,1.693 5.474,1.693c0,0 1.452,4.385 2.209,6.615c0.095,0.28 0.314,0.5 0.603,0.576c0.288,0.075 0.596,-0.004 0.811,-0.207c1.216,-1.148 3.096,-2.923 3.096,-2.923c0,0 3.572,2.619 5.598,4.062Zm-11.01,-8.677l1.679,5.538l0.373,-3.507c0,0 6.487,-5.851 10.185,-9.186c0.108,-0.098 0.123,-0.262 0.033,-0.377c-0.089,-0.115 -0.253,-0.142 -0.376,-0.064c-4.286,2.737 -11.894,7.596 -11.894,7.596Z"></path>
-    </svg>
-    <span style="color: white;">Contact us</span>
-  </a>
+  <div class="button-container">
+    <a href="https://telegram.me/DJLCorp_bot" class="telegram-button">
+      <img src="/assets/telegram.png" alt="Telegram Icon" width="20" height="20">
+      <span>Telegram</span>
+    </a>
 
+    <a href="https://telegram.me/DJLCorp_bot" class="whatsapp-button">
+      <img src="/assets/whatsapp.png" alt="WhatsApp Icon" width="20" height="20">
+      <span>Whatsapp</span>
+    </a>
+
+    <a href="mailto:info@djlcorp.es" class="email-button">
+      <img src="/assets/email.png" alt="Email Icon" width="20" height="20">
+      <span>E-mail</span>
+    </a>
+  </div>
+  
 </div>
