--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -30,7 +30,7 @@
   line-height: $base-line-height * $base-font-size * 2.25;
 
   .nav-trigger {
-      display: none;
+    display: none;
   }
 
   .menu-icon {
@@ -40,6 +40,14 @@
   .page-link {
     color: $text-color;
     line-height: $base-line-height;
+    align-items: center;
+    padding: 10px 15px;
+    background-color: #00aacc;
+    color: #ffffff;
+    border: 1px solid #00aacc;
+    border-radius: 20px;
+    text-decoration: none;
+    font-weight: bold;
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
@@ -55,6 +63,7 @@
     border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
+    
 
     label[for="nav-trigger"] {
       display: block;
@@ -189,25 +198,64 @@
   @include relative-font-size(1.75);
 }
 
-.post-list {
-  margin-left: 0;
-  list-style: none;
+// .post-list {
+//   margin-left: 0;
+//   list-style: none;
 
-  > li {
-    margin-bottom: $spacing-unit;
-  }
-}
-
-.post-meta {
-  font-size: $small-font-size;
-  color: $grey-color;
-}
+//   > li {
+//     margin-bottom: $spacing-unit;
+//   }
+// }
 
 .post-link {
-  display: block;
-  @include relative-font-size(1.5);
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-text-stroke: black;
 }
 
+.post-link:hover,
+.post-link:visited:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.post-grid {
+  display: grid;
+  padding: 15px 5px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+
+}
+
+.post-grid-item {
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  text-align: center;
+  position: relative;
+}
+
+.post-grid-item h2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.post-grid a:visited {
+  color: white;
+}
+
+.post-image img {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.post-excerpt {
+  margin-top: 10px;
+}
 
 
 /**
